# Device-Driver

./: .gitignore  CMakeLists.txt  README.md
driver/: CMakeLists.txt  Makefile  mouse.h  mouse.mod  mouse_char.c  mouse_driver.c  mouse_features.c  mouse_features.h  mouse_proc.c  mouse_usb.c
gui/: main.py
include/: shared_ioctl.h
scripts/: bind_mouse.sh  load.sh  test.sh  unload.sh
user/: CMakeLists.txt  main.c
userLib/: CMakeLists.txt  device_api.c  device_api.h  main.c  monitor.c  set.c
